--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>Hello, Welcome to the Alumni Database</h2>
             <h3>Choose a category to get started</h3>
         </div>
-        <a href="https://aualumnidatbase.herokuapp.com.">
+        <a href="https://aualumnidatbase.herokuapp.com">
             <div class="page-section1">
                 <img class="logo2" src="Student-Icon-2 (1).png"/>
                 <h2 class="alumniSurvey">Alumni Survey</h2>
