--- a/s.html
+++ b/s.html
@@ -23,8 +23,8 @@
     
                 <p>Password</p>
                 <input type="password" name="password">
-    
-                <button type="submit">Sign In</button>
+
+                <  button a href="home-page.html, type="submit">Sign In</button>
             </form>
         </div>
     </div>
