--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <p>Password</p>
                 <input type="password" name="password">
 
-                <  button a href="index1.html", type="submit">Sign In</button>
+                               <a href="index1.html">
+   <button>Sign In</button>
+</a>
             </form>
         </div>
     </div>
