--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p>Password</p>
                 <input type="password" name="password">
 
-                            <a href="index1.html">
+                            <a href="https://giannaw.github.io/MockUp/index1">
    <button>Sign In</button>
 </a>
        
