--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <input type="password" name="password">
 
                             <a href="https://giannaw.github.io/MockUp/index1">
-   <button>Sign In</button>
+               <button>Sign In</button>
 </a>
-       
+        </div>
         </div>
     </div>
 </body>
