--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img class="logo" src="logo.svg"/>
         </div>
         <div class="background">
-            <img class="backpicture" src="Background.jpg"/>
+            <img class="backpicture" src="Background .jpeg"/>
         </div>
         <div class="sign-in-area">
             <h1 class="titleName">Sign In</h1>
